worked on hw7 again

--- a/handin/hw7_jasonha/hw7_jha.ipynb
+++ b/handin/hw7_jasonha/hw7_jha.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 32,
    "id": "632b82c6",
    "metadata": {},
    "outputs": [
@@ -63,6 +63,31 @@
       "experienced\n",
       "software\n",
       "developer\n",
+      "experienced\n",
+      "Deleting\n",
+      "Deleting\n",
+      "Deleting\n",
+      "Deleting\n",
+      "Deleting\n",
+      "Deleting\n",
+      "Deleting\n",
+      "Deleting\n",
+      "Deleting\n",
+      "iterating\n",
+      "iterating\n",
+      "iterating\n",
+      "iterating\n",
+      "iterating\n",
+      "iterating\n",
+      "iterating\n",
+      "iterating\n",
+      "iterating\n",
+      "iterating\n",
+      "iterating\n",
+      "iterating\n",
+      "iterating\n",
+      "experienced\n",
+      "experienced\n",
       "experienced\n"
      ]
     }
@@ -77,31 +102,14 @@
     "for word in range(len(sentence)):\n",
     "    if len(sentence[word])>len(temp_lw):\n",
     "        temp_lw= sentence[word]\n",
-    "print(temp_lw)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "1e278c40",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "developer\n"
-     ]
-    }
-   ],
-   "source": [
-    "temp_lw= ['']\n",
+    "print(temp_lw)\n",
+    "temp_lw2= ['']\n",
     "n=0\n",
-    "while n <= len(sentence):\n",
-    "    if len(sentence[word])>len(temp_lw):\n",
-    "        temp_lw= sentence[word]\n",
+    "while n < len(sentence):\n",
+    "    if len(sentence[n])>len(temp_lw2):\n",
+    "        temp_lw2 = sentence[n]\n",
     "    n=n+1\n",
-    "print(temp_lw)"
+    "print(temp_lw2)"
    ]
   },
   {
