--- a/handin/hw6_jasonha/hw7 support.ipynb
+++ b/handin/hw6_jasonha/hw7 support.ipynb
@@ -1,135 +1,20 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "id": "c9781bf3",
-   "metadata": {},
-   "source": [
-    "Jason Ha Assignment 7 2/23/22"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "a5ef21ca",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "6203c267",
-   "metadata": {},
-   "source": [
-    "Problem 2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "632b82c6",
+   "execution_count": 24,
+   "id": "e1dc5131",
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Problem 2 : \n",
-      "\n",
-      "Deleting\n",
-      "an\n",
-      "item\n",
-      "from\n",
-      "a\n",
-      "list\n",
-      "or\n",
-      "array\n",
-      "while\n",
-      "iterating\n",
-      "over\n",
-      "it\n",
-      "is\n",
-      "a\n",
-      "Python\n",
-      "problem\n",
-      "that\n",
-      "is\n",
-      "well\n",
-      "known\n",
-      "to\n",
-      "any\n",
-      "experienced\n",
-      "software\n",
-      "developer\n",
-      "experienced\n",
-      "experienced\n",
-      "Dgfros"
-     ]
-    }
-   ],
-   "source": [
-    "print('Problem 2 : \\n')\n",
-    "sentence= ['Deleting', 'an', 'item', 'from' ,'a' ,'list' ,'or' ,'array' ,'while', 'iterating', 'over', 'it', 'is', 'a', 'Python', 'problem', 'that', 'is', 'well', 'known', 'to', 'any', 'experienced', 'software', 'developer']\n",
-    "for word in range(len(sentence)):\n",
-    "    print(sentence[word])\n",
-    "    \n",
-    "temp_lw= ['']\n",
-    "for word in range(len(sentence)):\n",
-    "    if len(sentence[word])>len(temp_lw):\n",
-    "        temp_lw= sentence[word]\n",
-    "print(temp_lw)\n",
-    "temp_lw2= ['']\n",
-    "n=0\n",
-    "while n < len(sentence):\n",
-    "    if len(sentence[n])>len(temp_lw2):\n",
-    "        temp_lw2 = sentence[n]\n",
-    "    n=n+1\n",
-    "print(temp_lw2)\n",
-    "\n",
-    "a = sentence[0]\n",
-    "b = sentence[1]\n",
-    "c = sentence[2]\n",
-    "d = sentence[3]\n",
-    "e = sentence[4]\n",
-    "f = sentence[5]\n",
-    "sentence2= a + b + c + d + e + f\n",
-    "\n",
-    "for i in range(0,len(sentence2)):\n",
-    "    flag=0\n",
-    "    for j in range(0,len(sentence2)):\n",
-    "        if(sentence2[i]==sentence2[j] and i!=j):\n",
-    "            flag=1\n",
-    "            break\n",
-    "    if(flag==0):\n",
-    "        print(sentence2[i],end='')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "d711c67f",
-   "metadata": {},
-   "source": [
-    "Problem 3"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "9b14b3aa",
-   "metadata": {},
-   "outputs": [
-    {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x255ce130b08>]"
+       "[<matplotlib.lines.Line2D at 0x196c386f908>]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -147,9 +32,10 @@
     }
    ],
    "source": [
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
     "y1arr= np.zeros(201)\n",
     "y2arr= np.zeros(201)\n",
-    "#%load C:\\Users\\jason\\Desktop\\phz3150\\handin\\hw7_jasonha\\hw7_support_funct.py\"\n",
     "def circle(x,x0,y0,r):\n",
     "    for i in range(0,201):\n",
     "        y1=y0-(((-(x0)**2) + (2*x0*x[i]) + (r**2) - (x[i]**2))**(1/2))\n",
@@ -160,21 +46,31 @@
     "x= -8.+0.1*np.arange(220)\n",
     "circle(x,2,2,10)\n",
     "plt.plot(x[0:201],y1arr)\n",
-    "plt.plot(x[0:201],y2arr)\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "e11a8611",
-   "metadata": {},
-   "source": [
-    "Problem 4"
+    "plt.plot(x[0:201],y2arr)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "3b3386a1",
+   "execution_count": null,
+   "id": "a060aa59",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y0=2\n",
+    "x0=2\n",
+    "r=10\n",
+    "x=10\n",
+    "y1=y0-(((-(x0)**2) + (2*x0*x) + (r**2) - (x**2))**(1/2))\n",
+    "print(y1)\n",
+    "yarr=[0,0]\n",
+    "yarr[1]=y1\n",
+    "print(yarr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "10ec4b25",
    "metadata": {},
    "outputs": [
     {
@@ -186,18 +82,51 @@
     }
    ],
    "source": [
-    "tempnum=0\n",
-    "#load% \"C:\\Users\\jason\\Desktop\\phz3150\\handin\\hw7_jasonha\\hw7_support_funct.py\"\n",
+    "\n",
+    "tempsmallnum=0\n",
     "def order_array(input_array):\n",
     "    for i in range(0,len(input_array)):\n",
     "        for j in range(i+1,len(input_array)):\n",
     "            if(input_array[i]>input_array[j]):\n",
-    "                tempnum=input_array[i]\n",
+    "                tempsmallnum=input_array[i]\n",
     "                input_array[i]=input_array[j]\n",
-    "                input_array[j]=tempnum\n",
+    "                input_array[j]=tempsmallnum\n",
     "    return print(input_array)\n",
     "order_array(np.array([4,5,2,10,42,22,8,12]))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "6b252117",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 2  4  5  8 10 12 22 42]\n"
+     ]
+    }
+   ],
+   "source": [
+    "input_array=np.array([4,5,2,10,42,22,8,12])\n",
+    "for i in range(0,len(input_array)):\n",
+    "        for j in range(i+1,len(input_array)):\n",
+    "            if(input_array[i]>input_array[j]):\n",
+    "                tempsmallnum=input_array[i]\n",
+    "                input_array[i]=input_array[j]\n",
+    "                input_array[j]=tempsmallnum\n",
+    "print(input_array)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c367284d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
