just kept workin on hw9

--- a/handin/hw9_jasonha/hw9_jha.ipynb
+++ b/handin/hw9_jasonha/hw9_jha.ipynb
@@ -2,19 +2,297 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "fb24012f",
+   "id": "9e25f512",
    "metadata": {},
    "source": [
     "Jason Ha HW 9 3/23/22"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e0b1af37",
+   "metadata": {},
+   "source": [
+    "Problem 2 (30 points total). You are in the committee for organizing your town’s \n",
+    "triathlon and you need to have an estimate for how long the event will take, and who \n",
+    "might win it. \n",
+    " \n",
+    "a)  (5 points) Create a numpy array sports with the average distance per sport \n",
+    "(swim, bike, run) : 1500, 40000, 10000.  \n",
+    "‘Mapping’ the names of athletes to an ID number (e.g, Mary = 1, John = 2 etc) \n",
+    "create a numpy array athletes_times that contains information about each \n",
+    "participant’s average speed per sport (so you will have a (6,4)  array ): \n",
+    " \n",
+    "Participant  ID  m/s for \n",
+    "swimming \n",
+    "m/s for biking  m/s for \n",
+    "running \n",
+    "Mary  1  1.204  6.6  0.32 \n",
+    "John  2  1.212  6.5  0.36 \n",
+    "Peter  3  1.14  6.6  0.38 \n",
+    "Mafalda  4  1.12  6.2  0.38 \n",
+    "Paul  5  1.24  5.6  0.4 \n",
+    "Lionel  6  1.201  6.0  0.3 \n",
+    " \n",
+    " \n",
+    "b)  (10 points)  Create a function triathlon_time(sports,athletes_times) \n",
+    "that gets as input your two arrays and outputs an informative message about \n",
+    "which participant will finish first and their expected time in hours, and which one \n",
+    "will finish last and their expected time in hours. Remember to use an appropriate \n",
+    "docstring. \n",
+    " \n",
+    "c)  (4 points) Change the list sports into a dictionary sports with keywords the \n",
+    "sports, and values the total distance for each sport. Change athletes_times \n",
+    "into a dictionary that has as keywords the names of participating athletes. For \n",
+    "each participant (i.e., for each key) create a list with their average speed per \n",
+    "sport (i.e., the appropriate dictionary values). \n",
+    " \n",
+    "d)  (8 points) Create function \n",
+    "triathlon_time_dict(sports,athletes_times)that get as input your \n",
+    "two dictionaries and like triathlon_time(sports,athletes) outputs an \n",
+    "informative message about which participant will finish first -- and their expected \n",
+    "time in hours -- and which one will finish last and their expected time in hours.  \n",
+    " \n",
+    "Tip 1: to simplify the problem you can gather the total distances the athletes need \n",
+    "to cover in a list or array in your triathlon_time_dict. \n",
+    "Tip 2: Scan over your athletes dictionary, and using their average speed per \n",
+    "sport calculate the total time each one needs to finish the race. Find the minimum \n",
+    "and maximum of these times and use that for your print() statements. \n",
+    " \n",
+    " \n",
+    "e)  (3 points) Call your functions (both triathlon_time and \n",
+    "triathlon_time_dict) and let me know who finishes first and who last, and \n",
+    "what their times will be. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "96349dc1",
+   "id": "096519c2",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "3ed0d3de",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Problem 2:\n",
+      "Participant  5.0  was fastest with a total time of  9.264592933947773  hours. Participant  6.0  was the slowest with a total completion time of  11.458044222407253  hours.\n",
+      "Participant  Paul  was fastest with a total time of  9.264592933947773  hours. Participant  Lionel  was the slowest with a total completion time of  11.458044222407253  hours.\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Problem 2:\")\n",
+    "sports= np.array([1500, 40000, 10000])\n",
+    "athletes_times = np.array([[1 , 1.204 , 6.6 , 0.32],\n",
+    "                           [2 , 1.212 , 6.5 , 0.36],\n",
+    "                           [3 , 1.14 , 6.6 , 0.38] , \n",
+    "                           [4 , 1.12 , 6.2 , 0.38], \n",
+    "                           [5 , 1.24 , 5.6 , 0.4],\n",
+    "                           [6, 1.201 , 6.0 , 0.3]])\n",
+    "def triathlon_time(sports,athletes_times):\n",
+    "    first_st=(sports[0]/athletes_times[0][1]) / 3600#calculation for time in seconds is distance/speed, seconds to hour is dividing by 3600\n",
+    "    first_bt=(sports[1]/athletes_times[0][2]) / 3600\n",
+    "    first_rt=(sports[2]/athletes_times[0][3]) / 3600\n",
+    "    first_tt= first_st + first_bt + first_rt\n",
+    "    fastest_tt=first_tt #makes the first participant have the fastest and slowest time recorded to compare\n",
+    "    slowest_tt=first_tt\n",
+    "    fp=0 #sets the fastest participant and slowest to 0, or the first one.\n",
+    "    sp=0\n",
+    "    for i in range(len(athletes_times)):\n",
+    "        st=(sports[0]/athletes_times[i][1]) / 3600#swim time gets the time in seconds and divides it by 3600 to get it in hours\n",
+    "        bt=(sports[1]/athletes_times[i][2]) / 3600\n",
+    "        rt=(sports[2]/athletes_times[i][3]) / 3600\n",
+    "        tt= st + bt + rt #calculates participants i's total time\n",
+    "        if tt > slowest_tt:#the if and elif compares participant i's total time to the time held in slowest and fastest time, if its either the most slow or most fast it becomes the new slowest or fastest\n",
+    "            slowest_tt = tt\n",
+    "            sp=athletes_times[i][0]#this updates the id number of the slowest participant to participant i\n",
+    "        elif tt < fastest_tt:\n",
+    "            fastest_tt = tt\n",
+    "            fp=athletes_times[i][0]\n",
+    "    return(print('Participant ',fp,' was fastest with a total time of ',fastest_tt,' hours. Participant ',sp,' was the slowest with a total completion time of ',slowest_tt,' hours.'))\n",
+    "triathlon_time(sports,athletes_times)\n",
+    "\n",
+    "sports={\n",
+    "    \"Swimming\":1500,\n",
+    "    \"Biking\":40000,\n",
+    "    \"Running\":10000\n",
+    "}\n",
+    "athletes_times={\n",
+    "    \"Mary\":[1.204,6.6,0.32],\n",
+    "    \"John\":[1.212,6.5,0.36],\n",
+    "    \"Peter\":[1.14,6.6,0.38],\n",
+    "    \"Mafalda\":[1.12,6.2,0.38],\n",
+    "    \"Paul\":[1.24,5.6,0.4],\n",
+    "    \"Lionel\":[1.201,6.0,0.3]\n",
+    "}\n",
+    "def triathlon_time_dict(sports,athletes_times):\n",
+    "    first_st=(sports[\"Swimming\"]/athletes_times[\"Mary\"][0]) / 3600#calculation for time in seconds is distance/speed, seconds to hour is dividing by 3600\n",
+    "    first_bt=(sports[\"Biking\"]/athletes_times[\"Mary\"][1]) / 3600\n",
+    "    first_rt=(sports[\"Running\"]/athletes_times[\"Mary\"][2]) / 3600\n",
+    "    first_tt= first_st + first_bt + first_rt\n",
+    "    fastest_tt=first_tt #makes the first participant have the fastest and slowest time recorded to compare\n",
+    "    slowest_tt=first_tt\n",
+    "    fp=\"Mary\" #sets the fastest participant and slowest to 0, or the first one.\n",
+    "    sp=\"Mary\"\n",
+    "    for key in athletes_times:\n",
+    "        st=(sports[\"Swimming\"]/athletes_times[key][0]) / 3600#swim time gets the time in seconds and divides it by 3600 to get it in hours\n",
+    "        bt=(sports[\"Biking\"]/athletes_times[key][1]) / 3600\n",
+    "        rt=(sports[\"Running\"]/athletes_times[key][2]) / 3600\n",
+    "        tt= st + bt + rt #calculates participants i's total time\n",
+    "        if tt > slowest_tt:#the if and elif compares participant i's total time to the time held in slowest and fastest time, if its either the most slow or most fast it becomes the new slowest or fastest\n",
+    "            slowest_tt = tt\n",
+    "            sp=key#this updates the id number of the slowest participant to participant i\n",
+    "        elif tt < fastest_tt:\n",
+    "            fastest_tt = tt\n",
+    "            fp=key\n",
+    "    return(print('Participant ',fp,' was fastest with a total time of ',fastest_tt,' hours. Participant ',sp,' was the slowest with a total completion time of ',slowest_tt,' hours.'))\n",
+    "triathlon_time_dict(sports,athletes_times)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d10d24c9",
+   "metadata": {},
+   "source": [
+    "Problem 3\n",
+    "a)  (5 points) Choose any problem from a recent homework assignment or other \n",
+    "assessment in another class that involves something you need to calculate or \n",
+    "derive and that you can plot. State the class, section, assignment, and item \n",
+    "number. State (or take a photo/ make a screenshot of) the problem. State (or \n",
+    "take a photo/ make a screenshot of) your solution as given in that class \n",
+    "(corrected by you).  \n",
+    " \n",
+    "b)  (15 points) Now, code your solution and make and save one or more plots. Your \n",
+    "code must use two or more of: control flow structures (conditional, loops, function \n",
+    "calls), when possible, avoid loops and use NumPy array math (you’ll get bonus 5 \n",
+    "points for actively doing this, provided it is appropriate), broadcasting, string \n",
+    "formatting, reading or writing data to/from a file, masks. However, everything you \n",
+    "write should be natural and belong in the code."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f9c343c6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cbd5082b",
+   "metadata": {},
+   "source": [
+    "Problem 4\n",
+    "Graduation season is coming, and you need to buy presents for \n",
+    "all your friends graduating! Surprising your friends with many little presents which you \n",
+    "hide in one big box is more fun than getting them one big present. The logistics though, \n",
+    "are hard. To prepare for that, you need to find out how much wrapping paper you will \n",
+    "need for the boxes and how many presents you can fit in every box! Create a class \n",
+    "graduation_presents that uses the dimensions a,b,c of a box to calculate the \n",
+    "box’s surface area and volume. Assume that your dimensions are in inches. The class \n",
+    "should also know how much wrapping paper you have (in inches2) and how many \n",
+    "presents you want to fit in your box. Use a proper initiation function.  \n",
+    " \n",
+    "Your class should contain:  \n",
+    "a)  An initiation function  \n",
+    "b)  a function that returns the surface area of the box (named, e.g., \n",
+    "surface_area),  \n",
+    "c)  a function that returns the volume of the box (e.g., volume),  \n",
+    "d)  a function that checks if you have enough wrapping paper to cover your box \n",
+    "(enough_paper)  \n",
+    "e)  a function that checks if your box can fit all the presents (fits; assuming that \n",
+    "the average volume of a gift is 25 inches3) and  \n",
+    "f)  a function (print_gift) that combines all these information and lets you know \n",
+    "(with print() statements) if you have enough wrapping paper to wrap your box, if \n",
+    "your gifts fit in the box, or if nothing is right.  \n",
+    " \n",
+    "Test it for the following combinations: \n",
+    "  \n",
+    "a  b  c  number_of_gifts  wrap_paper_available \n",
+    "10  10  10  15  800 \n",
+    "10  10  10  55  1000 \n",
+    "100  20  10  55  300 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "id": "6ae73c19",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Problem 4:\n",
+      "You have enough wrapping paper and space in the box for the gifts!\n",
+      "None\n",
+      "You have enough wrapping paper for the gifts but no space!\n",
+      "None\n",
+      "You have enough space in the box but not enough paper!\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Problem 4:\")\n",
+    "class graduation_presents:\n",
+    "#initialize\n",
+    "    def __init__(self , a , b , c , number_of_gifts,wrap_paper_available ):\n",
+    "        self.a = a\n",
+    "        self.b = b\n",
+    "        self.c = c\n",
+    "        self.number_of_gifts = number_of_gifts\n",
+    "        self.wrap_paper_available = wrap_paper_available\n",
+    "#defines function that returns the surface area of the box\n",
+    "    def surface_area(self):\n",
+    "        return((2*self.a*self.b)+(2*self.a*self.c)+(2*self.b*self.c))\n",
+    "#defines function that returns the volume of the box\n",
+    "    def volume(self):\n",
+    "        return(self.a*self.b*self.c)\n",
+    "#returns boolean values for this check\n",
+    "    def enough_paper(self):\n",
+    "        if self.wrap_paper_available >= self.surface_area():\n",
+    "            return True\n",
+    "        else:\n",
+    "            return False\n",
+    "#returns boolean values for whether or not this is true\n",
+    "    def fits(self):\n",
+    "        if self.number_of_gifts*25 <= self.volume():\n",
+    "            return True\n",
+    "        else:\n",
+    "            return False\n",
+    "#uses the boolean values returned before to know which statement to print.\n",
+    "    def print_gift(self):\n",
+    "        if self.enough_paper() and self.fits():\n",
+    "            print ('You have enough wrapping paper and space in the box for the gifts!')\n",
+    "        elif self.enough_paper():\n",
+    "            print('You have enough wrapping paper for the gifts but no space!')\n",
+    "        elif self.fits():\n",
+    "            print('You have enough space in the box but not enough paper!')\n",
+    "        else:\n",
+    "            print(\"You don't have enough paper or space in the box for this!\")\n",
+    "a = graduation_presents(10,10,10,15,800)\n",
+    "b = graduation_presents(10,10,10,55,1000)\n",
+    "c = graduation_presents(100,20,10,55,300)\n",
+    "print(a.print_gift())\n",
+    "print(b.print_gift())\n",
+    "print(c.print_gift())"
+   ]
   }
  ],
  "metadata": {
