--- a/handin/hw8_jasonha/hw8_support_funct.ipynb
+++ b/handin/hw8_jasonha/hw8_support_funct.ipynb
@@ -8,7 +8,7 @@
    "outputs": [],
    "source": [
     "def kepler_3rd(period):\n",
-    "    a1=((period**2)*(1**3)/(1**2))**(1/3)#uses the given period in earth years to calculate the distance in AU using keplers 3rd law equation\n",
+    "    a1**3=((period**2)*(1**3)/(1**2))**(1/3)#uses the given period in earth years to calculate the distance in AU using keplers 3rd law equation\n",
     "    return print(\"This planet's orbital distance is \",a1,\" AU.\")"
    ]
   },
